# rk_pcba_test

./: CMakeLists.txt  Makefile  audio_test.h  common.h  ddr_test.h  echo_audio_play_test.c  echo_auto_test.c  echo_bt_test.c  echo_discovery.c  echo_emmc_test.c  echo_key_test.c  echo_pcbatest_server.c  echo_ringmic_pdm_test.c  echo_ringmic_test.c  echo_rtc_test.c  echo_wlan_test.c  write_storage.c
mic_test_Linux/: record_test.c
rk_pcba_test/: PcbaTestLunch.sh  close_wakeWord.sh  ipconfig.sh  iw  restart_wakeWord.sh
rk_vendor_storage/: rk_vendor_storage.c  rk_vendor_storage.h
uevent/: echo_uevent_detect.c  ipconfig.sh
